--- a/app/views/home/_nav.html.erb
+++ b/app/views/home/_nav.html.erb
@@ -14,8 +14,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Reset</a></li>
-        <li><a href="#">Execute!</a></li>
+        <%if @matches == 0%>
+        <li><a href="javascript:void(0)" id="start" >Execute!</a></li>
+        <% else %>
+        <li><a href="javascript:void(0)" id="reset" disabled="true">Reset</a></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
