added some validations when you create the matches

--- a/app/views/home/_nav.html.erb
+++ b/app/views/home/_nav.html.erb
@@ -14,11 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <%if @matches == 0%>
-        <li><a href="javascript:void(0)" id="start" >Execute!</a></li>
-        <% else %>
-        <li><a href="javascript:void(0)" id="reset" disabled="true">Reset</a></li>
-        <% end %>
+        <li style="<%= @matches == 0 ? 'display: none' : ''%>"><a href="javascript:void(0)" id="reset">Reset</a></li>
+        <li style="display: <%= @matches == 64 ? 'none' : ''%>"><a href="javascript:void(0)" id="start" >Execute!</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
