--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,18 +6,24 @@
         <li role="presentation"><a href="#round_16" aria-controls="round_16" role="tab" data-toggle="tab">Round of 16</a></li>
         <li role="presentation"><a href="#round_8" aria-controls="round_8" role="tab" data-toggle="tab">Quarter-finals</a></li>
         <li role="presentation"><a href="#round_4" aria-controls="round_4" role="tab" data-toggle="tab">Semi-finals</a></li>
-        <li role="presentation"><a href="#round_2_loser" aria-controls="round_2_loser" role="tab" data-toggle="tab">Third place play-off</a></li>
         <li role="presentation"><a href="#round_2" aria-controls="round_2" role="tab" data-toggle="tab">Final</a></li>
       </ul>
       <div class="tab-content">
           <div role="tabpanel" class="tab-pane fade in active" id="groups">
             <%= render 'groups'%>
           </div>
-          <div role="tabpanel" class="tab-pane fade" id="round_16">...</div>
-          <div role="tabpanel" class="tab-pane fade" id="round_8">8888</div>
-          <div role="tabpanel" class="tab-pane fade" id="round_4">semi</div>
-          <div role="tabpanel" class="tab-pane fade" id="round_2_loser">third</div>
-          <div role="tabpanel" class="tab-pane fade" id="round_2">final</div>
+          <div role="tabpanel" class="tab-pane fade" id="round_16">
+            <%=render 'round_16'%>
+          </div>
+          <div role="tabpanel" class="tab-pane fade" id="round_8">
+            <%= render 'round_8'%>
+          </div>
+          <div role="tabpanel" class="tab-pane fade" id="round_4">
+            <%= render 'round_4'%>
+          </div>
+          <div role="tabpanel" class="tab-pane fade" id="round_2">
+            <%= render 'final' %>
+          </div>
         </div>      
     <%end%>
   </div>
