added some style to start the simulation

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,7 +24,16 @@
           <div role="tabpanel" class="tab-pane fade" id="round_2">
             <%= render 'final' %>
           </div>
-        </div>      
+        </div>
+    <% else %>
+      <div class="row btn-container">
+        <div class="col-md-6 col-sm-offset-3">
+          <div class="text-center">
+            <h2>Wold Cup Simulator</h2>
+            <button class="btn btn-primary btn-lg" id="start" >Start!</a>    
+          </div>
+        </div>
+      </div>
     <%end%>
   </div>
 </div>
